fix!: Zooming in may break the layout of content
`display: inline-block` creates whitespace where ToC was initially at, and .main's left margin is based off that. This causes the layout to break when zooming in i.e. .main may shift to the right to accompany the invisible ToC and `margin-left`. Fixed by setting the xl media query for nav + content + toc, and adjust .main accordingly to fit md, lg and xl.

As a side effect, if the device width cannot fit ToC, only nav and content will be shown and centered as with the current layout.

BREAKING CHANGES: Both nav.toc and .main are now set to `display: inline-block`. When making position changes to .main, also consider the width of the invisible block reserved for nav.toc (whose position is shifted).

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -16,8 +16,12 @@
   }
 
   @include mq(lg) {
-    width: calc((100% - #{$nav-width + $toc-width + $content-width}) / 2 + #{$nav-width});
+    width: calc((100% - #{$nav-width + $content-width}) / 2 + #{$nav-width});
     min-width: $nav-width;
+  }
+
+  @include mq(xl) {
+    width: calc((100% - #{$nav-width + $toc-width + $content-width}) / 2 + #{$nav-width});
   }
 
   & ~ .main {
@@ -30,9 +34,13 @@
       // disable for Max(), we want to use the CSS max() function
       margin-left: Max(
         #{$nav-width},
-        calc((100% - #{$nav-width + $toc-width + $content-width}) / 2 + #{$nav-width - $toc-width})
+        calc((100% - #{$nav-width + $content-width}) / 2 + #{$nav-width})
       );
       // stylelint-enable function-name-case
+    }
+
+    @include mq(xl) {
+      margin-left: calc(-#{$toc-width} + (100% - #{$nav-width + $toc-width + $content-width}) / 2 + #{$nav-width});
     }
 
     .main-header {
@@ -232,32 +240,32 @@ ref: Bug 1448995
 As a temporary fix, set both the main content and ToC to be inline with each other, adjust .main's
 margin-left to accompany the ToC that goes before it */
 nav.toc {
-  position: sticky;
-  top: 1rem;
-  left: calc((100% - #{$nav-width + $toc-width + $content-width}) / 2 + #{$nav-width + $content-width} + 1rem);
-  display: inline-block;
-  vertical-align: top;
-  margin-top: #{$header-height + $sp-8};
-  width: $toc-width;
-  max-height: calc(100vh - 1rem);
-  overflow-y: auto;
+  display: none;
+  visibility: hidden;
+
+  @include mq(xl) {
+    display: inline-block;
+    visibility: visible;
+    position: sticky;
+    top: 1rem;
+    left: calc((100% - #{$nav-width + $toc-width + $content-width}) / 2 + #{$nav-width + $content-width} + 1rem);
+    vertical-align: top;
+    margin-top: #{$header-height + $sp-8};
+    width: $toc-width;
+    max-height: calc(100vh - 1rem);
+    overflow-y: auto;
+  }
 
   @include fs-3;
 }
 
 .main-content details {
-  display: none;
-  visibility: hidden;
-}
+  display: block;
+  visibility: visible;
 
-@media (max-width: calc(#{$nav-width + $toc-width + $content-width})) {
-  nav.toc {
+  @include mq(xl) {
     display: none;
     visibility: hidden;
-  }
-  .main-content details {
-    display: block;
-    visibility: visible;
   }
 }
 
